# mafia

./: .gitignore  README.md  main.py  pyproject.toml  setup.py  structured_outputs_example.py
config/: constants.py  game_config.json
docs/: PRD.md  RPD_instruction.txt  project_structure.txt  prompt_examples.md
game/: game_manager.py
models/: player.py  role.py
prompts/: prompt_manager.py
results/: 241121.txt
src/ai/: conversation_manager.py  llm_agent.py  memory_manager.py  prompt_builder.py
src/game/: game_manager.py  game_state.py  turn_manager.py
src/mafia/: main.py
src/mafia/ai/: llm_agent.py  memory_manager.py  prompt_builder.py
src/mafia/game/: game_manager.py
src/mafia/players/: base_player.py  citizen.py  doctor.py  mafia.py  police.py
src/mafia/utils/: config.py  enum.py  logger.py
src/players/: base_player.py  citizen.py  doctor.py  mafia.py  police.py
src/utils/: config.py  enum.py  logger.py
systems/: chat_system.py
tests/: __init__.py  test_game_manager.py  test_game_state.py  test_players.py  test_turn_manager.py
